# layz

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
configs/: defaults.json
docs/plans/: 2026-02-01-fitness-accountability-agent-design.md  2026-02-01-fitness-agent-implementation.md
scripts/: deploy.sh  seed_firestore.py
src/: __init__.py  main.py
src/agent/: coach.py
src/agent/tools/: __init__.py  comms.py  fitness.py  nutrition.py
src/config/: __init__.py  loader.py
src/scheduler/: __init__.py  checkins.py  triggers.py
src/storage/: __init__.py  firestore.py  memory.py
src/webhooks/: __init__.py  sms.py  voice.py
tests/: __init__.py  test_agent.py  test_config.py  test_firestore.py  test_memory.py  test_scheduler.py  test_tools.py  test_voice.py  test_webhooks.py
